Fix slider-wrapper overflow property to prevent horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .slider-wrapper {
-        overflow: hidden;
+        overflow-x: hidden;
         width: 100%;
 }
 
